2007-Dec-03  Heikki Junnila <hjunnila@users.sf.net>
	* Added one common QLCChannel & QLCCapability to generic fixtures so
	  that every component depending on them wouldn't crash.
	* Started some work on making USBDMX plugin to support multiple
	  universes (mainly just indenting :)
	* Updated some documentation to speak about fixture instead of device.

2007-Nov-29  Heikki Junnila <hjunnila@users.sf.net>
	* Connected to plugin manager's closed() signal to close the window

2007-Nov-29  Heikki Junnila <hjunnila@users.sf.net>
	* Updated plugin manager to act as the access point for dmx mapper.

2007-Nov-25  Heikki Junnila <hjunnila@users.sf.net>
	* Took plugin manager into circles again because plugins need to be
	  configured from some common dialog. Output Manager might get
	  somehow integrated into plugin manager.

2007-Nov-11  Heikki Junnila <hjunnila@users.sf.net>
	* Christopher Staite: Changed usleep() to nanosleep() in
	  FunctionConsumer.
	* Created DMXPatchEditor to DMXMapEditor for individual
	  patch editing (as the primary edit method, context menu
	  being the secondary method).

2007-Nov-08  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed a memory leak in FunctionConsumer's usleep timer code.
	* Added Christopher Staite to AboutBox.

2007-Nov-06  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented RTC & USleep timer methods for FunctionConsumer
	  as suggested by Christopher Staite.

2007-Nov-06  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented saving/loading for DMXMap

2007-Oct-26  Heikki Junnila <hjunnila@users.sf.net>
	* Optimized Monitor so that it reads only the visible range of values.

2007-Oct-26  Heikki Junnila <hjunnila@users.sf.net>
	* FixtureConsole resizes itself a bit taller.

2007-Oct-25  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed VCSliderProperties' slider naming in bus mode: setting a name
	  in bus mode is not possible.

2007-Oct-25  Heikki Junnila <hjunnila@users.sf.net>
	* Changed VCButton to inherit VCWidget